--- a/card-component-homework/src/App.css
+++ b/card-component-homework/src/App.css
@@ -3,4 +3,19 @@
   margin:0;
 }
 
+.nav{
+  background-image: url("https://images.pexels.com/photos/2404185/pexels-photo-2404185.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+  background-size: cover;
+  background-repeat:no-repeat;
+  background-position: 0% 35%;
+  height:20vh;
+}
 
+.nav ul{
+  background: white;
+  opacity: 0.7;
+}
+
+a{
+  text-decoration: none;
+}
