--- a/card-component-homework/src/App.css
+++ b/card-component-homework/src/App.css
@@ -11,9 +11,18 @@
   height:20vh;
 }
 
+.nav li{
+ margin: 10px;
+}
+
 .nav ul{
   background: white;
   opacity: 0.7;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: row;
+  list-style: none;
+  padding: 10px;
 }
 
 a{
