--- a/card-component-homework/src/App.css
+++ b/card-component-homework/src/App.css
@@ -16,8 +16,8 @@
 }
 
 .nav ul{
-  background: white;
-  opacity: 0.4;
+  background: rgb(0, 0, 0);
+  opacity: 0.9;
   display: flex;
   justify-content: flex-end;
   flex-direction: row;
@@ -27,4 +27,6 @@
 
 a{
   text-decoration: none;
+  color:rgb(255, 255, 255);
+  font-weight: bold;
 }
