--- a/card-component-homework/src/App.css
+++ b/card-component-homework/src/App.css
@@ -1,21 +1,21 @@
-*{
+* {
   padding: 0;
-  margin:0;
+  margin: 0;
 }
 
-.nav{
+.nav {
   background-image: url("https://coolwallpapers.me/picsup/6013846-background-knowledge-wallpaper-book-mood-pages-book.jpg");
   background-size: cover;
-  background-repeat:no-repeat;
+  background-repeat: no-repeat;
   background-position: 0% 90%;
-  height:20vh;
+  height: 20vh;
 }
 
-.nav li{
- margin: 10px;
+.nav li {
+  margin: 10px;
 }
 
-.nav ul{
+.nav ul {
   background: rgb(0, 0, 0);
   opacity: 0.9;
   display: flex;
@@ -25,8 +25,13 @@
   padding: 10px;
 }
 
-a{
+a {
   text-decoration: none;
-  color:rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
   font-weight: bold;
+}
+
+.Card-component img {
+  width: 300px;
+  height: 500px;
 }
