Replaced main selector with the new sections rows classes and added flex properties

--- a/card-component-homework/src/App.css
+++ b/card-component-homework/src/App.css
@@ -40,7 +40,9 @@ a {
   text-align: center;
 }
 
-main {
+.row1,
+.row2,
+.row3 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
